--- a/body1/style.css
+++ b/body1/style.css
@@ -30,20 +30,20 @@ main {
     z-index: 20;
     color: white;
     padding: 0 70px;
-    margin: 0 auto;
-    width: 100%;
+    margin: 0 150px 0 150px;
+    max-width: 1600px;
+    width:100%;
+
 }
 .subtitle {
     font-size: 20px;
     font-weight: 600;
-    margin: 0 151px;
 }
 .maintitle {
     font-family: 'din-2014', sans-serif;
     font-size: 76px;
     font-weight: 400;
     margin-top: 16px;
-    margin-left: 151px;
     letter-spacing: -1.68px;
     line-height: 1;
 }
@@ -53,11 +53,18 @@ main {
     align-items: center;
     text-align: right;
     font-family: 'din-2014', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
-    margin-right: 151px;
-    max-width: 492px;
     line-height: 1.86;
+}
+.text1 {
+    max-width: 351px;
+}
+.text2 {
+    max-width: 387px;
+}
+.text3 {
+    max-width: 161px;
 }
 .yajirusi {
     display: flex;
@@ -76,8 +83,8 @@ svg {
     .yajirusi {
         background-color: white;
     }
-    svg {
-        fill: black;
+    path {
+        stroke: black;
     }
 }
 .bottom {
@@ -85,13 +92,14 @@ svg {
     bottom: 0;
     z-index: 20;
     padding: 0 70px;
-    margin-top: 56px;
+    margin: 56px 150px 0 150px;
     width: 100%;
+    max-width: 1600px;
     color: white;
 }
 .lines {
     display: flex;
-    margin: 0 151px;
+    
 }
 .lines > div {
     background-color: rgba(255, 255, 255, 0.3);
@@ -111,7 +119,6 @@ ul {
     font-family: 'din-2014', sans-serif;
     font-size: 14px;
     font-weight: 600;
-    margin: 0 151px;
 }
 .link-name {
     margin-right: 20px;
