--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -1,12 +1,16 @@
 body {
     background-color: black;
 }
+.nav-sp {
+    display: none;
+}
+@media (min-width: 992px) {
 .header-all {
     background-color: #fdfdf1;
     border-radius: 8px 8px 8px 8px;
     display: flex;
-    margin: 19px 19px;
-    padding: 23px 29px;
+    margin: 25px 30px;
+    padding: 25px 29px;
     align-items: center;
     justify-content: space-between;
 }
@@ -14,17 +18,22 @@ body {
     display: flex;
     align-items: center;
     font-family: Ppfraktionmono,sans-serif;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 700;
-    letter-spacing: 1px;
-    gap: 25px;
+    letter-spacing: 2px;
+    gap: 30px;
 }
 .logolink {
-    width: 130px;
+    width: 150px;
 }
 .nav {
     display: flex;
-    gap: 25px;
+    gap: 30px;
+}
+.navlink:hover {
+    border-bottom: 1px solid;
+    border-color: black;
+    
 }
 .double {
     position: relative;
@@ -40,7 +49,7 @@ body {
     right: auto;
 }
 .link_button_icon {
-    width: 12px;
+    width: 14px;
 }
 .hoverlogo {
     display: none;
@@ -50,8 +59,77 @@ body {
     border: solid;
     border-width: 1px;
     border-radius: 100vw;
-    padding: 14px 27px;
+    padding: 16px 31px;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     cursor: pointer;
+}
+#menu-open {
+    display: none;
+}
+}
+@media (max-width: 991px) {
+    .header-all {
+        background-color: #fdfdf1;
+        border-radius: 8px 8px 8px 8px;
+        display: flex;
+        margin: 20px 25px;
+        padding: 20px 29px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .rightlink {
+        display: flex;
+        align-items: center;
+        font-family: Ppfraktionmono,sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        gap: 30px;
+    }
+    .logolink {
+        width: 130px;
+    }
+    .nav {
+        display: flex;
+        gap: 30px;
+    }
+    .double {
+        position: relative;
+    }
+    .buttontext {
+        position: relative;
+    }
+    .hovertext {
+        position: absolute;
+        top: 0%;
+        bottom: auto;
+        left: 0%;
+        right: auto;
+    }
+    .link_button_icon {
+        width: 14px;
+    }
+    .hoverlogo {
+        display: none;
+    }
+    .link {
+        display: flex;
+        border: solid;
+        border-width: 1px;
+        border-radius: 100vw;
+        padding: 16px 31px;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+    }
+    .rightlink {
+        display: none;
+    }
+    #menu-open {
+        font-family: Ppfraktionmono,sans-serif;
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
 }
