--- a/footer1/style.css
+++ b/footer1/style.css
@@ -2,10 +2,13 @@ body {
     height: 3000px;
 }
 .back {
-    position: relative;
+    height: 100vh;
 }
-.movie {
+video {
     position: fixed;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 footer {
     margin: 0 auto;
