--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -1,18 +1,21 @@
 body {
     background-color: black;
 }
-.nav-sp {
-    display: none;
+header {
+    position: relative;
+    overflow-x: hidden;
 }
 @media (min-width: 992px) {
 .header-all {
     background-color: #fdfdf1;
     border-radius: 8px 8px 8px 8px;
     display: flex;
-    margin: 25px 30px;
+    margin: 25px auto;
     padding: 25px 29px;
     align-items: center;
     justify-content: space-between;
+    max-width: 2160px;
+    width: 97%;
 }
 .rightlink {
     display: flex;
@@ -33,7 +36,6 @@ body {
 .navlink:hover {
     border-bottom: 1px solid;
     border-color: black;
-    
 }
 .double {
     position: relative;
@@ -64,7 +66,7 @@ body {
     gap: 10px;
     cursor: pointer;
 }
-#menu-open {
+.menu-open {
     display: none;
 }
 }
@@ -79,13 +81,18 @@ body {
         justify-content: space-between;
     }
     .rightlink {
-        display: flex;
-        align-items: center;
-        font-family: Ppfraktionmono,sans-serif;
-        font-size: 14px;
-        font-weight: 700;
-        letter-spacing: 2px;
-        gap: 30px;
+        background-color: #fdfdf1;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        transform: translateX(100%);
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        left: 0
+    }
+    .rightlink.active {
+        transform: translate(0);
     }
     .logolink {
         width: 130px;
@@ -123,10 +130,7 @@ body {
         gap: 10px;
         cursor: pointer;
     }
-    .rightlink {
-        display: none;
-    }
-    #menu-open {
+    .menu-open {
         font-family: Ppfraktionmono,sans-serif;
         font-size: 12px;
         font-weight: 700;
