--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -1,11 +1,10 @@
 body {
-    background-color: black;
+    background-image: url(https://cdn.prod.website-files.com/663943bed8a37337f94a3f67/6647873f9a00a00b9980599a_Home_2.webp)
 }
 header {
     position: relative;
     overflow-x: hidden;
 }
-@media (min-width: 992px) {
 .header-all {
     background-color: #fdfdf1;
     border-radius: 8px 8px 8px 8px;
@@ -69,13 +68,13 @@ header {
 .menu-open {
     display: none;
 }
-}
 @media (max-width: 991px) {
     .header-all {
         background-color: #fdfdf1;
         border-radius: 8px 8px 8px 8px;
         display: flex;
-        margin: 20px 25px;
+        margin-top: 20px;
+        width: 95%;
         padding: 20px 29px;
         align-items: center;
         justify-content: space-between;
@@ -87,19 +86,17 @@ header {
         transform: translateX(100%);
         position: fixed;
         top: 0;
-        width: 100%;
+        width: 90vw;
         height: 100vh;
-        left: 0
+        right: 0;
+        z-index: 1;
     }
     .rightlink.active {
         transform: translate(0);
+        transition: all 0.3s;
     }
     .logolink {
         width: 130px;
-    }
-    .nav {
-        display: flex;
-        gap: 30px;
     }
     .double {
         position: relative;
@@ -135,5 +132,17 @@ header {
         font-size: 12px;
         font-weight: 700;
         letter-spacing: 1px;
+        display: block;
+    }
+    .background.active {
+        position: fixed;
+        background-color: rgba(57, 68, 43, .4);
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        transition: all 0.3s;
+    }
+    .nav {
+        display: block;
     }
 }
