--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -65,7 +65,16 @@ header {
     gap: 10px;
     cursor: pointer;
 }
+.hbnav {
+    display: none;
+}
 .menu-open {
+    display: none;
+}
+.close {
+    display: none;
+}
+.icon {
     display: none;
 }
 @media (max-width: 991px) {
@@ -79,24 +88,36 @@ header {
         align-items: center;
         justify-content: space-between;
     }
+    .close {
+        display: flex;
+        justify-content: flex-end;
+    }
     .rightlink {
         background-color: #fdfdf1;
+        font-family: Ppfraktionmono,sans-serif;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
         transform: translateX(100%);
+        transition: all 0.4s;
+        display: block;
         position: fixed;
         top: 0;
         width: 90vw;
         height: 100vh;
         right: 0;
         z-index: 1;
+        padding: 62px 24px 64px;
+        font-size: 12px;
     }
     .rightlink.active {
         transform: translate(0);
-        transition: all 0.3s;
     }
     .logolink {
         width: 130px;
+    }
+    .button {
+        display: flex;
+        margin-top: auto;
     }
     .double {
         position: relative;
@@ -112,6 +133,7 @@ header {
         right: auto;
     }
     .link_button_icon {
+        display: block;
         width: 14px;
     }
     .hoverlogo {
@@ -124,8 +146,10 @@ header {
         border-radius: 100vw;
         padding: 16px 31px;
         align-items: center;
+        justify-content: center;
         gap: 10px;
         cursor: pointer;
+        width: 100%;
     }
     .menu-open {
         font-family: Ppfraktionmono,sans-serif;
@@ -140,9 +164,27 @@ header {
         width: 100%;
         height: 100vh;
         top: 0;
-        transition: all 0.3s;
+        transition: all 0.4s;
     }
     .nav {
         display: block;
+        margin-top: 40px;
+    }
+    .hbnav {
+        display: block;
+        display: flex;
+        justify-content: space-between;
+    }
+    li {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        border-top: solid;
+        border-width: 1px;
+        display: flex;
+        justify-content: space-between;
+    }
+    ul:last-of-type {
+        border-bottom: solid;
+        border-width: 1px;
     }
 }
