--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -99,7 +99,10 @@ header {
         border-bottom-left-radius: 20px;
         transform: translateX(100%);
         transition: all 0.4s;
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: initial;
+        overflow-y: auto;
         position: fixed;
         top: 0;
         width: 90vw;
@@ -169,6 +172,7 @@ header {
     .nav {
         display: block;
         margin-top: 40px;
+        position: relative;
     }
     .hbnav {
         display: block;
@@ -186,5 +190,23 @@ header {
     ul:last-of-type {
         border-bottom: solid;
         border-width: 1px;
+    }
+    .x, .y {
+        content: '';
+        background-color: black;
+        width: 10px;
+        height: 2px;
+        display: block;
+        position: absolute;
+        top: 35px;
+        right: 0;
+    }
+    .y {
+        transform: rotate(90deg)
+    }
+}
+.is-resize {
+    .rightlink {
+        transition: none;
     }
 }
