--- a/header_kadai/style.css
+++ b/header_kadai/style.css
@@ -32,10 +32,26 @@ header {
     display: flex;
     gap: 30px;
 }
-.navlink:hover {
-    border-bottom: 1px solid;
-    border-color: black;
-}
+.navlink {
+    position: relative;
+    &::after{
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      height: 1px;
+      background-color: black;
+      transition: width 0.3s;
+      width: 0;
+    }
+    &:hover{
+      &::after{
+        width: 100%;
+        left: 0;
+      }
+    }
+  }
 .double {
     position: relative;
 }
