--- a/moriliving/moriliving.css
+++ b/moriliving/moriliving.css
@@ -1,17 +1,24 @@
-.back {
-    position:relative;
+.bg-wrap {
+    position:fixed;
+    aspect-ratio: 16/9;
+    min-height: 56.25vw;
+    min-width: 100vw;
     height: 100vh;
+    left: 50%;
+    transform: translatex(-50%);
+}
+.bg-video {
+    width: 100%;
+    height: 100%;
+}
+.bg-video iframe {
+    width: 100%;
+    height: 100%;
 }
 .header {
     display: flex;
     justify-content: center;
     width: 100%;
-}
-iframe {
-    position: fixed;
-    width: 100%;
-    height:100%;
-    object-fit: cover;
 }
 .nav {
     display: flex;
@@ -25,6 +32,9 @@ iframe {
     font-weight: 300;
     display: flex;
     column-gap: 10px;
+}
+.lang.active {
+    display: none;
 }
 .lien, .lija {
     font-size: 14px;
@@ -57,19 +67,47 @@ iframe {
 .hbline {
     cursor: pointer;
 }
+.hbline.active {
+    z-index: 3;
+}
+.top.active {
+    background-color: #3c1504;
+    transform-origin: left;
+    transform: rotate(17deg) scaleX(1.07);
+    transition: 0.3s;
+}
+.bottom.active {
+    background-color: #3c1504;
+    transform-origin: left;
+    transform: rotate(-17deg) scaleX(1.07);
+    transition: 0.3s;
+}
 .line {
     content: '';
-    background-color: black;
+    background-color: white;
+    width: 40px;
+    height: 1px;
+    margin: 5px;
+    transition: 0.3s;
+}
+.middle {
+    content: '';
+    background-color: rgba(255, 255, 255, 0.342);
+    /* background-color: rgba(60, 21, 4, 0.2); */
     width: 40px;
     height: 1.5px;
     margin: 5px;
 }
-.middle {
-    content: '';
-    background-color: rgba(60, 21, 4, 0.2);
-    width: 40px;
-    height: 1.5px;
-    margin: 5px;
+.middle.active {
+    background-color: transparent;
+    transition: 0.3s;
+}
+.menu-back.active {
+    position: absolute;
+    top: 0;
+    background-color: rgba(29, 5, 2, 0.842);
+    width: 100%;
+    height: 100vh;
 }
 .hbmenu {
     position: absolute;
@@ -77,11 +115,18 @@ iframe {
     right: 0;
     background-color: white;
     width: 40vw;
-    height: 100vh;
+    max-width: 640px;
+    height: 100%;
     display: flex;
     right: 0;
-    padding: 0 5%;
+    padding: 0 5% 0 49px;
     z-index: -1;
+}
+.hbmenu.active {
+   z-index: 2;
+}
+.hbbody {
+    margin-right: auto; 
 }
 .hbheader {
     position: relative;
