--- a/moriliving/moriliving.css
+++ b/moriliving/moriliving.css
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    color: white;
 }
 .nav {
     display: flex;
@@ -50,7 +51,7 @@
     height: 1px;
     bottom: 0;
     right: 0;
-    background-color: black;
+    background-color: white;
 }
 .rightnav {
     position: relative;
