--- a/choujuku-body/choujuku.css
+++ b/choujuku-body/choujuku.css
@@ -15,7 +15,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 10;
     transform: translateY(70%);
 }
 .base-picture-p {
@@ -27,21 +27,27 @@ body {
     color: white;
     letter-spacing: 5px;
 }
+.top-pictures {
+    position: relative;
+}
+.item {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+}
+.zero {
+    position: relative;
+    z-index: 1;
+}
 .top-pictures img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
-.bottom-picture {
+.swiper {
     width: 100%;
     max-width: 1100px;
-    display: flex;
-    justify-content: space-between;
-    gap: 0 10px;
     position: absolute;
     bottom: 0px;
     left: 50%;
@@ -49,47 +55,98 @@ body {
     z-index: 99;
     padding-bottom: 60px;
 }
-.link-picture {
-    background-color: white;
-    border-radius: 20px;
-    padding: 30px 5px 15px 5px;
-    text-align: center;
+.swiper-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 0 10px;
     position: relative;
+
+    .swiper-slide {
+        max-width: 175px;
+
+        .link-picture::before {
+            display: none;
+            content: "";
+            width: 440px;
+            height: 150px;
+            background-color: #005099;
+            border-radius: 440px / 150px;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            z-index: 1;
+            opacity: 0;
+            transform: translate(-50%, 100%);
+            transition: transform .3s, opacity .3s;
+        }
+        .link-picture {
+            background-color: white;
+            border-radius: 20px;
+            padding: 30px 5px 15px 5px;
+            text-align: center;
+            position: relative;
+    
+            .select-picture {
+                width: 175px;
+            }
+            .txt {
+                font-size: 14px;
+                font-weight: bold;
+                color: #005099;
+            }
+        }
+        .link-picture img {
+            width: 120px;
+            margin: 0 auto 10px auto;
+            position: relative;
+        }
+    }
+    .swiper-slide a::before{
+        content: "";
+        width: 10px;
+        height: 10px;
+        background-color: white;
+        border: 2px solid #005099;
+        border-radius: 10px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        z-index: 5;
+    }
 }
-.link-picture img {
-    margin: 0 auto 10px auto;
-}
-.link-picture::after {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background-color: white;
-    border: 2px solid #005099;
-    border-radius: 10px;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
-.select-picture {
-    width: 165px;
-}
-.txt {
-    font-size: 14px;
-    font-weight: bold;
-    color: #005099;
-}
+
+
+
+
 .slide-picture {
     display: flex;
     position:  relative;
     gap: 0 50px;
-    z-index: 5;
+    z-index: 12;
     justify-content: center;
     overflow: hidden;
 }
 .slide-picture img {
     border-radius: 15px;
 }
-.one.active {
+.top-pictures {
     position: relative;
-    z-index: 3;
+}
+.one.active {
+    z-index: 9;
+}
+.two.active {
+    z-index: 9;
+}
+.three.active {
+    z-index: 9;
+}
+.four.active {
+    z-index: 9;
+}
+.five.active {
+    z-index: 9;
+}
+.six.active {
+    z-index: 9;
 }
