--- a/corporate2/css/style.css
+++ b/corporate2/css/style.css
@@ -1,5 +1,4 @@
 body {
-    width: 100vw;
     height: 100vh;
     background-color: #f0f0f0;
 }
@@ -22,6 +21,7 @@ header {
 }
 .contact a {
     color: white;
+    font-size: 12px;
 }
 .top-picture {
     width: 100%;
@@ -34,7 +34,6 @@ header {
     padding-left: 16px;
 }  
 .article {
-    width: 144px;
     height: 103px;
     position: relative;
 }
@@ -42,14 +41,16 @@ header {
     display: flex;
     align-items: center;
     margin-top: 50px;
+    font-size: 14px;
 }
 .news-title {
-    font-size: 35px;
+    font-size: 36px;
     letter-spacing: 10px;
 }
 .subtitle {
     position: absolute;
     top: 50%;
+    font-size: 14px;
 }
 .title-line {
     content: '';
@@ -88,14 +89,17 @@ header {
     margin-right: 70px;
 }
 .about-item {
-    margin: 168px 70px 0 0;
+    margin-top: 168px;
     min-width: 490px;
+    font-size: 14px;
+    padding-left: 16px;
 }
 .business {
     max-width: 1037px;
     margin: 120px auto 0 auto;
     display: flex;
     justify-content: center;
+    padding: 0 16px;
 }
 .business-item {
     display: flex;
@@ -130,9 +134,10 @@ header {
 .picture-title {
     margin-bottom: 10px;
     font-weight: bold;
+    font-size: 14px;
 }
 .company {
-    margin: 120px 16px 128px 0;
+    margin: 120px 0 128px 0;
     display: flex;
     justify-content: center;
 }
@@ -140,27 +145,27 @@ header {
     background-color: white;
     padding: 100px 139px 100px 62px;
     width: 567px;
-    height: 622px;
 }
 .info {
-    width: 366px;
-    height: 269px;
     white-space: nowrap;
-    font-size: 15px;
+    font-size: 14px;
     margin-top: 50px;
+    padding-right: 10px;
     line-height: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
-.no-sp {
+dt {
+    width: 20%;
+    font-weight: lighter;
+}
+dd {
     padding-left: 20px;
-}
-.no-pc {
-   display: none;
+    width: 80%;
 }
 .space {
     letter-spacing: 5px;
-}
-.line-height {
-    line-height: 30px;
 }
 .company-picture {
     margin: 111px 0 0 -80px;
@@ -198,13 +203,15 @@ footer {
         width: 80px;
     }
     .nav{
-        margin: 8px 0 15px 0;
+        margin: 5px 0 15px 0;
+        font-size: 14px;
     }
     .contact {
         display: none;
     }
     .news {
         margin-top: 80px;
+        width: 100%;
     }
     .news-item {
         display: block;
@@ -220,22 +227,23 @@ footer {
         display: block;
     }
     .about-picture {
-        width: 95%;
+        width: 85%;
         height: 300px;
-        margin-left: -41px;
+        margin-right: 0;
     }
     .about-item {
-        margin: 41px 0 80px 16px;
-        min-width: 343px;
+        margin: 41px 0 80px 0;
+        min-width: 100%;
     }
     .letter {
         margin-top: 16px;
+        margin-right: 0;
         padding-top: 0;
+        max-width: 100%;
     }
     .business {
         display: block;
-        margin: 0 16px;
-        padding: 0;
+        width: 100%;
     }
     .business-item {
         display: block;
@@ -247,11 +255,9 @@ footer {
     }
     .left {
         margin-top: 34px;
-        margin-right: 16px;
     }
     .right {
         margin-top: 30px;
-        margin-right: 16px;
     }
     .under {
         margin-top: 30px;
@@ -259,31 +265,29 @@ footer {
     .company {
         display: block;
         margin-bottom: 0;
+        padding: 0 16px;
     }
     .company-info {
-        padding: 36px 31px 44px 17px;
+        padding: 36px 0 44px 17px;
         width: 100%;
         height: 100%;
-        margin: 0 16px;
+        margin-bottom: 16px;
     }
     .info {
         margin-top: 34px;
-    }
-    .no-sp {
-        display: none;
+        font-size: 14px;
+        width: 100%;
+        height: 100%;
+        display: block;
     }
     .th {
         padding: 15px 0 0 0;
-    }
-    .no-pc {
-        display: block;
-        margin-left: 14px;
     }
     .company-picture {
         width: 100%;
         height: 400px;
         object-fit: cover;
-        margin: 16px 16px 0 16px;
+        margin: 0;
     }
     .footer-all {
         margin: 0;
