--- a/choujuku-body/choujuku.css
+++ b/choujuku-body/choujuku.css
@@ -1,12 +1,11 @@
 body {
     width: 100%;
-    min-width: 1200px;
+    height: 100vh;
 }
-.top {
-    height: 500px;
+.gallery02 {
     position: relative;
 }
-.top::before {
+.swiper::before {
     display: block;
     content: "";
     width: 100%;
@@ -18,135 +17,164 @@ body {
     z-index: 10;
     transform: translateY(70%);
 }
+.swiper-wrapper {
+    position: absolute;
+    top: 0;
+}
+.outline {
+    display: flex;
+    align-items: end;
+    max-width: 1100px;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 170px;
+    position: absolute;
+    top: 0;
+    z-index: 5;
+}
+.right {
+    display: flex;
+    align-items: end;
+    max-width: 1100px;
+    margin: 0 auto;
+    width: 100vh;
+    height: 100%;
+    padding-bottom: 170px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 5;
+}
+.slide-picture img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+.txt {
+    font-size: 22px;
+    font-weight: 500;
+    min-width: 410px;
+    padding: 30px 50px 70px 50px;
+    background-color: rgba(255, 255, 255, .8);
+    border-radius: 40px;
+    position: relative;
+    margin-bottom: 100px;
+}
+.title {
+    color: #005099;
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 1.3;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #005099;
+}
+.copy {
+    color: #005099;
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+p {
+    font-size: 15px;
+    line-height: 30px;
+}
+.btnStyle01 {
+    position: absolute;
+    bottom: 0;
+    left: 50px;
+    transform: translateY(50%);
+    background-color: #005099;
+    color: white;
+    padding: 15px 55px;
+    border-radius: 10em;
+}
 .base-picture-p {
     position: absolute;
     top: 31.5%;
     left: 11.7%;
-    z-index: 3;
     font-size: 30px;
     color: white;
     letter-spacing: 5px;
 }
-.top-pictures {
+.thumb-media {
     position: relative;
 }
-.item {
+.select-picture::before {
+    display: block;
+    content: "";
+    width: 440px;
+    height: 150px;
+    background-color: #005099;
+    border-radius: 440px / 150px;
     position: absolute;
-    top: 0;
-    width: 100%;
-    height: 400px;
-}
-.zero {
-    position: relative;
+    bottom: 0;
+    left: 50%;
     z-index: 1;
+    opacity: 0;
+    transform: translate(-50%, 100%);
+    transition: transform .3s, opacity .3s;
 }
-.top-pictures img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.link-picture::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border: 2px solid #005099;
+    border-radius: 10px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 5;
 }
-.swiper {
+.link-picture {
+    background-color: white;
+    border-radius: 15px;
+    padding: 30px 5px 15px 5px;
+    width: 175px;
+    overflow: hidden;
+}
+.select-picture {
+    width: 120px;
+    margin: 0 auto 10px auto;
+}
+.select-picture img {
+    position: relative;
+    z-index: 2;
+}
+.thumb-wrapper {
+    display: flex;
     width: 100%;
     max-width: 1100px;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: 50%;
-    transform: translatex(-50%);
-    z-index: 99;
-    padding-bottom: 60px;
-}
-.swiper-wrapper {
-    display: flex;
+    z-index: 2;
+    transform: translateX(-50%);
     justify-content: space-between;
     gap: 0 10px;
+    align-items: center;
+    text-align: center;
+}
+.name {
+    color: #005099;
+    font-size: 14px;
+    font-weight: bold;
     position: relative;
-
-    .swiper-slide {
-        max-width: 175px;
-
-        .link-picture::before {
-            display: none;
-            content: "";
-            width: 440px;
-            height: 150px;
-            background-color: #005099;
-            border-radius: 440px / 150px;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            z-index: 1;
-            opacity: 0;
-            transform: translate(-50%, 100%);
-            transition: transform .3s, opacity .3s;
-        }
-        .link-picture {
-            background-color: white;
-            border-radius: 20px;
-            padding: 30px 5px 15px 5px;
-            text-align: center;
-            position: relative;
-    
-            .select-picture {
-                width: 175px;
-            }
-            .txt {
-                font-size: 14px;
-                font-weight: bold;
-                color: #005099;
-            }
-        }
-        .link-picture img {
-            width: 120px;
-            margin: 0 auto 10px auto;
-            position: relative;
-        }
-    }
-    .swiper-slide a::before{
-        content: "";
-        width: 10px;
-        height: 10px;
-        background-color: white;
-        border: 2px solid #005099;
-        border-radius: 10px;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        z-index: 5;
-    }
+    z-index: 2;
 }
-
-
-
-
-.slide-picture {
-    display: flex;
-    position:  relative;
-    gap: 0 50px;
-    z-index: 12;
-    justify-content: center;
-    overflow: hidden;
+.thumb-media-active .link-picture::before {
+    background-color: #005099;
 }
-.slide-picture img {
-    border-radius: 15px;
+.thumb-media-active .link-picture {
+    transform: translateY(-10%);
 }
-.top-pictures {
-    position: relative;
+.thumb-media-active .select-picture::before {
+    transform: translate(-50%, 50%);
+    opacity: 1;
 }
-.one.active {
-    z-index: 9;
-}
-.two.active {
-    z-index: 9;
-}
-.three.active {
-    z-index: 9;
-}
-.four.active {
-    z-index: 9;
-}
-.five.active {
-    z-index: 9;
-}
-.six.active {
-    z-index: 9;
+.thumb-media-active .name {
+    color: white;
 }
