--- a/portfolio/kadai_tutorial_output/style.css
+++ b/portfolio/kadai_tutorial_output/style.css
@@ -1,8 +1,5 @@
 body {
     font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
-    max-width: 1080px;
-    min-width: 960px;
-    margin: 0 auto 0 auto;
 }
 p {
     font-size: 15px;
@@ -11,7 +8,7 @@ p {
 @media screen and (min-width: 768px) {
     body {
         max-width: 1080px;
-        min-width: 960px;
+        min-width: 900px;
     margin: 0 auto 0 auto;
     }
 header {
@@ -145,7 +142,7 @@ h3 {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
 }
 .product-explain > span {
-    color: #2710b5;
+    color: #2710d5;
     font-weight: bold;
     font-size: 16px;
     margin: 0;
@@ -180,11 +177,11 @@ h3 {
 }
 .culture-num {
     font-size: 80px;
-    color: #2710b5;
+    color: #2710d5;
     margin-right: 20px;
 }
 .culture-en {
-    color: #2710b5;
+    color: #2710d5;
     font-weight: bold;
     font-size: 24px;
     display: block;
@@ -238,11 +235,11 @@ h3 {
     font-size: 20px;
     margin: 0 0 0 0;
 }
-.vision > span > p {
+.vision-box > span > p {
     margin: 10px 0 0 0;
 }
 #company {
-    margin: 80px 0 80px 0;
+    margin: 80px auto 80px auto;
 }
 #company-table {
     width: 100%;
@@ -259,6 +256,7 @@ h3 {
         border-top-color: #ececec;
         border-top-width: 1px;
         border-top-style: solid;
+        width: 100%;
     }
     .cell {
         padding: 30px;
@@ -307,7 +305,7 @@ h3 {
         border-right: 0;
         border-bottom-width: 1px;
         border-bottom-color: #707070;
-        border-bottom-style: solid;
+        border-style: solid;
         background-color: #fafafa;
         width: 400px;
         height: 56px;
@@ -318,7 +316,6 @@ h3 {
         border-right: 0;
         border-bottom-width: 1px;
         border-bottom-color: #707070;
-        border-bottom-style: solid;
         background-color: #fafafa;
         width: 400px;
         height: 200px;
@@ -439,6 +436,7 @@ h3 {
         color: #2710d5;
         font-size: 48px;
         margin: 0;
+        font-weight: bold;
     }
     .fivegoals-h3 {
         font-size: 28px;
@@ -450,7 +448,7 @@ h3 {
     #product-main {
         height: 496px;
         width: 100%;
-        background-image: url(images/product/product-main.png);
+        background-image: url("images/product/product-main.png");
         background-repeat: no-repeat;
         background-position-y: center;
     }
@@ -528,37 +526,6 @@ h3 {
         font-size: 28px;
         margin: 0;
       }
-      #cases {
-        margin: 40px auto 40px auto;
-        width: 100%;
-    }
-    #cases > ul {
-        display: flex;
-        list-style: none;
-        justify-content: center;
-    }
-    #cases > ul > li {
-        width: 33%;
-        margin: 20px;
-    }
-    .case-card {
-        background-color: #ffffff;
-        min-height: 400px;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-    }
-    .case-img {
-        width: 100%;
-    }
-    .case-info {
-        padding: 10px 20px 10px 20px;
-    }
-    .case-name {
-        color: #2710d5;
-        font-size: 19px;
-    }
-    .case-content {
-        font-size: 14px;
-    }
 }
 
 @media screen and (max-width: 767px) {
@@ -666,7 +633,7 @@ h3 {
         font-size: 24px;
         margin: 10x 0 0 0;
     }
-    #misiion {
+    #missiion {
         margin: 20px;
     }
     #mission-photo {
@@ -790,7 +757,7 @@ h3 {
     #company > h3 {
         margin-bottom: 20px;
     }
-    #company > table {
+    #company-table {
         width: 100%;
     }
     .tableheader-first {
@@ -855,7 +822,7 @@ h3 {
         font-weight: bold;
     }
     .contact-textbox {
-        height: 50px;
+        height: 56px;
         border-top: 0;
         border-left: 0;
         border-right: 0;
@@ -924,7 +891,7 @@ h3 {
     #mission-main {
         height: 256px;
         width: 100%;
-        background-image: url(images/mission/mission-main.png);
+        background-image: url("images/mission/mission-main.png");
         background-repeat: no-repeat;
         background-position-y: center;
         background-size: auto 208px;
@@ -940,7 +907,7 @@ h3 {
     #mission-title > h1 {
         position: absolute;
         top: 0;
-        left: 0;
+        left: 20px;
         font-size: 40px;
     }
     #mission-title > span {
@@ -967,6 +934,9 @@ h3 {
         content: none;
     }
     #mission-s2dgs > img {
+        width: 100%;
+    }
+    #section-s2dgs > img {
         width: 100%;
     }
     #mission-5goals {
@@ -1060,12 +1030,5 @@ h3 {
     .product-h3 {
         font-size: 28px;
         margin: 0;
-    }
-    #cases > ul {
-        display: block;
-        list-style: none;
-    }
-    .case-img {
-        width: 100vw;
     }
 }
